--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #section-button {
-  padding: 10px 10px;
+  padding: 10px;
 }
 
 .color {
@@ -12,6 +12,18 @@
 
 #color-0 {
   background-color: black;
+}
+
+#color-1 {
+  background-color: blueviolet;
+}
+
+#color-2 {
+  background-color: rgb(226, 168, 43);
+}
+
+#color-3 {
+  background-color: rgb(190, 45, 45);
 }
 
 #pixel-board {
