--- a/style.css
+++ b/style.css
@@ -29,10 +29,15 @@
 #pixel-board {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
+  gap: 0;
+  width: 0;
+  height: 0;
+  padding: 10px;
+  margin: 10px;
 }
 
 .pixel {
+
   border: 1px solid black;
   width: 40px;
   height: 40px;
