--- a/style.css
+++ b/style.css
@@ -15,15 +15,15 @@
 }
 
 #color-1 {
-  background-color: blueviolet;
+  background-color: red;
 }
 
 #color-2 {
-  background-color: rgb(226, 168, 43);
+  background-color: blue;
 }
 
 #color-3 {
-  background-color: rgb(190, 45, 45);
+  background-color: pink;
 }
 
 #pixel-board {
@@ -41,5 +41,5 @@
   width: 40px;
   height: 40px;
   margin: 2px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
