--- a/style.css
+++ b/style.css
@@ -41,5 +41,5 @@
   width: 40px;
   height: 40px;
   margin: 2px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(255 255 255);
 }
